# sounds

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: audio.rs  candle_whisper.rs  capture.rs  detect.rs  main.rs  whisper_backend.rs
