[package]
name = "sounds"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
audio-blocks = "0.7.0"
candle = { package = "candle-core", version = "0.11.0", features = ["accelerate", "metal"] }
candle-nn = { version = "0.11.0", features = ["accelerate", "metal"] }
candle-transformers = { version = "0.11.0", features = ["accelerate", "metal"] }
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.18.1"
hf-hub = { version = "0.5.0", features = ["tokio"] }
rand = "0.9"
serde_json = "1"
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }
wavers = "1.5.1"
