[package]
name = "sounds"
version = "0.1.0"
edition = "2024"

[features]
default = []
metal = ["whisper-rs/metal"]

[dependencies]
anyhow = "1"
audio-blocks = "0.7.0"
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.18.1"
env_logger = "0.11.8"
log = "0.4.27"
strsim = "0.11.1"
wavers = "1.5.1"
whisper-rs = "0.16.0"
